# AegisForge

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  OWNER_ACTIONS.md  PROJECT_ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  deep-research-report.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: action-smoke-test.yml  ci.yml  vscode-extension.yml
docs/adr/: 0000-record-architecture-decisions.md  0001-verification-ladder.md  0002-orchestration-in-process-behind-port.md  0003-standards-aligned-outputs.md  0004-untrusted-analyzed-input.md  0005-uv-workspace-monorepo.md  0006-llm-provider-abstraction.md  0007-benchmark-first.md  0008-event-sourced-findings.md  README.md
docs/assets/: _gen_demo_gif.py
docs/benchmark/: evaluation-framework.md
docs/linkedin/: LINKEDIN_CONTENT_STRATEGY.md  LINKEDIN_POSTING_DASHBOARD.md  LINKEDIN_POSTS.md  PROJECT_SHOWCASE.md  README.md  _gen_assets.py
docs/linkedin/posts/: 01-project-launch.md  02-technical-deep-dive.md  03-building-journey.md  04-open-source-contribution.md  05-feature-spotlight.md
docs/reviews/: 2026-07-05-phase-1-architecture-review.md
docs/specifications/: MPS-v1.0.md
integrations/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
integrations/vscode/src/: extension.ts  sarif.ts  scan.ts
integrations/vscode/test/: runIntegrationTests.ts
integrations/vscode/test/suite/: extension.test.ts  index.ts
integrations/vscode/test/unit/: sarif.test.ts  scan.test.ts
research/: 001-verification-ladder.md  002-vex-as-first-class-output.md  003-contamination-controlled-evaluation.md  004-prompt-injection-resistant-agents.md  README.md
src/aegisforge/: __init__.py
src/aegisforge/domain/: enums.py  models.py  value_objects.py  verification.py
tests/unit/domain/: test_verification.py
