# AegisForge workspace root.
#
# This file is a uv *workspace* manifest, not an installable distribution
# (see [tool.uv] package = false below). Each real package lives under
# packages/<name>/ with its own [project]/[build-system]. Shared dev tooling
# (lint/type/test) and its configuration live here so every package in the
# workspace is held to one standard (see ADR-0005).
[project]
name = "aegisforge-workspace"
version = "0.0.0"
description = "AegisForge workspace root (not published; see packages/ for distributions)."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "import-linter>=2.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter, shared across every package in the workspace.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# Extend this list as new packages/<name>/{src,tests} directories are added.
src = ["packages/aegisforge-core/src", "packages/aegisforge-core/tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "N",        # pep8-naming
  "UP",       # pyupgrade
  "B",        # flake8-bugbear
  "C4",       # comprehensions
  "SIM",      # flake8-simplify
  "TID",      # tidy imports
  "RUF",      # ruff-specific
  "S",        # flake8-bandit (security)
  "PL",       # pylint
]
ignore = [
  "PLR0913",  # many arguments — common for rich domain constructors
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "PLR2004"]  # asserts and magic values are fine in tests

[tool.ruff.lint.isort]
known-first-party = ["aegisforge", "tests"]

# ---------------------------------------------------------------------------
# mypy — strict typing across the workspace.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = ["packages/aegisforge-core/src"]
files = ["packages/aegisforge-core/src", "packages/aegisforge-core/tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["packages/aegisforge-core/tests"]
markers = [
  "unit: fast, isolated unit tests",
  "integration: cross-component integration tests",
  "security: adversarial / security-focused tests",
]

[tool.coverage.run]
branch = true
source = ["aegisforge"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ---------------------------------------------------------------------------
# import-linter — enforces the hexagonal dependency direction (ADR-0005).
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["aegisforge"]

# The overarching dependency direction (MPS §8.2: "dependencies point inward").
# As adapters/application/interface packages land in later phases, add their
# top-level modules above "aegisforge.plugins" here, highest (most dependent)
# first.
[[tool.importlinter.contracts]]
name = "Layered dependency direction (core)"
type = "layers"
layers = [
  "aegisforge.plugins",
  "aegisforge.ports",
  "aegisforge.domain",
]

[[tool.importlinter.contracts]]
name = "Domain core stays pure"
type = "forbidden"
source_modules = ["aegisforge.domain"]
forbidden_modules = [
  "aegisforge.ports",
  "aegisforge.plugins",
  "aegisforge.cpg",
  "aegisforge.scanners",
  "aegisforge.llm",
  "aegisforge.orchestrator",
  "aegisforge.sandbox",
  "aegisforge.storage",
  "aegisforge.cli",
  "aegisforge.server",
  "aegisforge.sdk",
]

[[tool.importlinter.contracts]]
name = "Ports declare contracts only, no adapters"
type = "forbidden"
source_modules = ["aegisforge.ports"]
forbidden_modules = [
  "aegisforge.cpg",
  "aegisforge.scanners",
  "aegisforge.llm",
  "aegisforge.orchestrator",
  "aegisforge.sandbox",
  "aegisforge.storage",
  "aegisforge.cli",
  "aegisforge.server",
  "aegisforge.sdk",
]

[[tool.importlinter.contracts]]
name = "Plugin registry does not depend on concrete adapters"
type = "forbidden"
source_modules = ["aegisforge.plugins"]
forbidden_modules = [
  "aegisforge.cpg",
  "aegisforge.scanners",
  "aegisforge.llm",
  "aegisforge.orchestrator",
  "aegisforge.sandbox",
  "aegisforge.storage",
]
