# CortexWard workspace root.
#
# This file is a uv *workspace* manifest, not an installable distribution
# (see [tool.uv] package = false below). Each real package lives under
# packages/<name>/ with its own [project]/[build-system]. Shared dev tooling
# (lint/type/test) and its configuration live here so every package in the
# workspace is held to one standard (see ADR-0005).
[project]
name = "cortexward-workspace"
version = "0.0.0"
description = "CortexWard workspace root (not published; see packages/ for distributions)."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "import-linter>=2.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter, shared across every package in the workspace.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# Extend this list as new packages/<name>/{src,tests} directories are added.
src = [
  "packages/cortexward-core/src", "packages/cortexward-core/tests",
  "packages/cortexward-cpg/src", "packages/cortexward-cpg/tests",
  "packages/cortexward-scanners/src", "packages/cortexward-scanners/tests",
  "packages/cortexward-reporters/src", "packages/cortexward-reporters/tests",
  "packages/cortexward-eval/src", "packages/cortexward-eval/tests",
  "packages/cortexward-llm/src", "packages/cortexward-llm/tests",
]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "N",        # pep8-naming
  "UP",       # pyupgrade
  "B",        # flake8-bugbear
  "C4",       # comprehensions
  "SIM",      # flake8-simplify
  "TID",      # tidy imports
  "RUF",      # ruff-specific
  "S",        # flake8-bandit (security)
  "PL",       # pylint
]
ignore = [
  "PLR0913",  # many arguments — common for rich domain constructors
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "PLR2004"]  # asserts and magic values are fine in tests

[tool.ruff.lint.isort]
known-first-party = ["cortexward", "tests"]

# ---------------------------------------------------------------------------
# mypy — strict typing across the workspace.
# ---------------------------------------------------------------------------
# mypy is invoked once per package (see the `mypy` CI step / CONTRIBUTING.md),
# not with every package's tests/ in one run: each package's tests/ has its
# own conftest.py, and with no __init__.py under tests/ (required so sibling
# packages' tests/ trees don't collide as the top-level module "tests" — see
# the pytest importlib note above), mypy would otherwise see two same-named
# top-level "conftest" modules and refuse to proceed. mypy_path still spans
# every package's src/ so cross-package imports (e.g. cortexward-cpg
# importing cortexward.domain/cortexward.ports from cortexward-core) resolve
# regardless of which package is being checked.
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = [
  "packages/cortexward-core/src",
  "packages/cortexward-cpg/src",
  "packages/cortexward-scanners/src",
  "packages/cortexward-reporters/src",
  "packages/cortexward-eval/src",
  "packages/cortexward-llm/src",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
# importlib import mode identifies test modules by file path rather than by a
# dotted package name inserted into sys.path. Every workspace package has its
# own tests/ directory; without this, two packages' tests/ trees would both
# claim the top-level module name "tests" and collide in sys.modules.
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
testpaths = [
  "packages/cortexward-core/tests",
  "packages/cortexward-cpg/tests",
  "packages/cortexward-scanners/tests",
  "packages/cortexward-reporters/tests",
  "packages/cortexward-eval/tests",
  "packages/cortexward-llm/tests",
]
markers = [
  "unit: fast, isolated unit tests",
  "integration: cross-component integration tests",
  "security: adversarial / security-focused tests",
]

[tool.coverage.run]
branch = true
source = ["cortexward"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ---------------------------------------------------------------------------
# import-linter — enforces the hexagonal dependency direction (ADR-0005).
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["cortexward"]

# The overarching dependency direction (MPS §8.2: "dependencies point inward").
# As adapters/application/interface packages land in later phases, add their
# top-level modules above "cortexward.plugins" here, highest (most dependent)
# first.
[[tool.importlinter.contracts]]
name = "Layered dependency direction (core)"
type = "layers"
layers = [
  "cortexward.plugins",
  "cortexward.ports",
  "cortexward.domain",
]

[[tool.importlinter.contracts]]
name = "Domain core stays pure"
type = "forbidden"
source_modules = ["cortexward.domain"]
forbidden_modules = [
  "cortexward.ports",
  "cortexward.plugins",
  "cortexward.cpg",
  "cortexward.scanners",
  "cortexward.reporters",
  "cortexward.eval",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]

[[tool.importlinter.contracts]]
name = "Ports declare contracts only, no adapters"
type = "forbidden"
source_modules = ["cortexward.ports"]
forbidden_modules = [
  "cortexward.cpg",
  "cortexward.scanners",
  "cortexward.reporters",
  "cortexward.eval",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]

[[tool.importlinter.contracts]]
name = "Plugin registry does not depend on concrete adapters"
type = "forbidden"
source_modules = ["cortexward.plugins"]
forbidden_modules = [
  "cortexward.cpg",
  "cortexward.scanners",
  "cortexward.reporters",
  "cortexward.eval",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
]

[[tool.importlinter.contracts]]
name = "CPG engine does not depend on other adapters or interfaces"
type = "forbidden"
source_modules = ["cortexward.cpg"]
forbidden_modules = [
  "cortexward.scanners",
  "cortexward.reporters",
  "cortexward.eval",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]

[[tool.importlinter.contracts]]
name = "Scanner adapters do not depend on other adapters or interfaces"
type = "forbidden"
source_modules = ["cortexward.scanners"]
forbidden_modules = [
  "cortexward.cpg",
  "cortexward.reporters",
  "cortexward.eval",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]

[[tool.importlinter.contracts]]
name = "Reporters do not depend on other adapters or interfaces"
type = "forbidden"
source_modules = ["cortexward.reporters"]
forbidden_modules = [
  "cortexward.cpg",
  "cortexward.scanners",
  "cortexward.eval",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]

# cortexward.eval currently only needs cortexward.domain (Finding,
# SourceLocation) for the RunManifest and matcher/metrics primitives. The
# harness's future "ward bench run" command will need to invoke scanners
# and reporters directly to produce results to measure — this contract is
# expected to loosen (drop cortexward.scanners/cortexward.reporters) when
# that orchestration lands, not a permanent restriction.
[[tool.importlinter.contracts]]
name = "Evaluation harness does not depend on other adapters or interfaces"
type = "forbidden"
source_modules = ["cortexward.eval"]
forbidden_modules = [
  "cortexward.cpg",
  "cortexward.scanners",
  "cortexward.reporters",
  "cortexward.llm",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]

[[tool.importlinter.contracts]]
name = "LLM adapters do not depend on other adapters or interfaces"
type = "forbidden"
source_modules = ["cortexward.llm"]
forbidden_modules = [
  "cortexward.cpg",
  "cortexward.scanners",
  "cortexward.reporters",
  "cortexward.eval",
  "cortexward.orchestrator",
  "cortexward.sandbox",
  "cortexward.storage",
  "cortexward.cli",
  "cortexward.server",
  "cortexward.sdk",
]
